tests/ui/invalid-impls/invalid-impls.msrv.stderr
error[E0277]: the trait bound `T: zerocopy::TryFromBytes` is not satisfied
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/../../../src/util/macros.rs:388:68
    |
388 |             impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),*> Subtrait for $ty {}
    |                                                                    ^^^^^^^^ the trait `zerocopy::TryFromBytes` is not implemented for `T`
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:26:5
    |
26  |     impl_or_verify!(T => TryFromBytes for Foo<T>);
    |     ---------------------------------------------- in this macro invocation
    |
note: required because of the requirements on the impl of `zerocopy::TryFromBytes` for `Foo<T>`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:21:10
    |
21  | #[derive(FromBytes, IntoBytes, Unaligned)]
    |          ^^^^^^^^^
note: required by a bound in `_::Subtrait`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/../../../src/util/macros.rs:401:29
    |
401 |             trait Subtrait: $trait {}
    |                             ^^^^^^ required by this bound in `_::Subtrait`
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:26:5
    |
26  |     impl_or_verify!(T => TryFromBytes for Foo<T>);
    |     ---------------------------------------------- in this macro invocation
    = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
    |
26  |     impl_or_verify!(T: zerocopy::TryFromBytes => TryFromBytes for Foo<T>);
    |                      ++++++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::FromZeros` is not satisfied
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/../../../src/util/macros.rs:388:68
    |
388 |             impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),*> Subtrait for $ty {}
    |                                                                    ^^^^^^^^ the trait `zerocopy::FromZeros` is not implemented for `T`
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:27:5
    |
27  |     impl_or_verify!(T => FromZeros for Foo<T>);
    |     ------------------------------------------- in this macro invocation
    |
note: required because of the requirements on the impl of `zerocopy::FromZeros` for `Foo<T>`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:21:10
    |
21  | #[derive(FromBytes, IntoBytes, Unaligned)]
    |          ^^^^^^^^^
note: required by a bound in `_::Subtrait`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/../../../src/util/macros.rs:401:29
    |
401 |             trait Subtrait: $trait {}
    |                             ^^^^^^ required by this bound in `_::Subtrait`
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:27:5
    |
27  |     impl_or_verify!(T => FromZeros for Foo<T>);
    |     ------------------------------------------- in this macro invocation
    = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
    |
27  |     impl_or_verify!(T: zerocopy::FromZeros => FromZeros for Foo<T>);
    |                      +++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::FromBytes` is not satisfied
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/../../../src/util/macros.rs:388:68
    |
388 |             impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),*> Subtrait for $ty {}
    |                                                                    ^^^^^^^^ the trait `zerocopy::FromBytes` is not implemented for `T`
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:28:5
    |
28  |     impl_or_verify!(T => FromBytes for Foo<T>);
    |     ------------------------------------------- in this macro invocation
    |
note: required because of the requirements on the impl of `zerocopy::FromBytes` for `Foo<T>`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:21:10
    |
21  | #[derive(FromBytes, IntoBytes, Unaligned)]
    |          ^^^^^^^^^
note: required by a bound in `_::Subtrait`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/../../../src/util/macros.rs:401:29
    |
401 |             trait Subtrait: $trait {}
    |                             ^^^^^^ required by this bound in `_::Subtrait`
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:28:5
    |
28  |     impl_or_verify!(T => FromBytes for Foo<T>);
    |     ------------------------------------------- in this macro invocation
    = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
    |
28  |     impl_or_verify!(T: zerocopy::FromBytes => FromBytes for Foo<T>);
    |                      +++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::IntoBytes` is not satisfied
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/../../../src/util/macros.rs:388:68
    |
388 |             impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),*> Subtrait for $ty {}
    |                                                                    ^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `T`
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:29:5
    |
29  |     impl_or_verify!(T => IntoBytes for Foo<T>);
    |     ------------------------------------------- in this macro invocation
    |
note: required because of the requirements on the impl of `zerocopy::IntoBytes` for `Foo<T>`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:21:21
    |
21  | #[derive(FromBytes, IntoBytes, Unaligned)]
    |                     ^^^^^^^^^
note: required by a bound in `_::Subtrait`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/../../../src/util/macros.rs:401:29
    |
401 |             trait Subtrait: $trait {}
    |                             ^^^^^^ required by this bound in `_::Subtrait`
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:29:5
    |
29  |     impl_or_verify!(T => IntoBytes for Foo<T>);
    |     ------------------------------------------- in this macro invocation
    = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
    |
29  |     impl_or_verify!(T: zerocopy::IntoBytes => IntoBytes for Foo<T>);
    |                      +++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::Unaligned` is not satisfied
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/../../../src/util/macros.rs:388:68
    |
388 |             impl<$($tyvar $(: $(? $optbound +)* $($bound +)*)?),*> Subtrait for $ty {}
    |                                                                    ^^^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `T`
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:30:5
    |
30  |     impl_or_verify!(T => Unaligned for Foo<T>);
    |     ------------------------------------------- in this macro invocation
    |
note: required because of the requirements on the impl of `zerocopy::Unaligned` for `Foo<T>`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:21:32
    |
21  | #[derive(FromBytes, IntoBytes, Unaligned)]
    |                                ^^^^^^^^^
note: required by a bound in `_::Subtrait`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/../../../src/util/macros.rs:401:29
    |
401 |             trait Subtrait: $trait {}
    |                             ^^^^^^ required by this bound in `_::Subtrait`
    |
   ::: /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/invalid-impls/invalid-impls.rs:30:5
    |
30  |     impl_or_verify!(T => Unaligned for Foo<T>);
    |     ------------------------------------------- in this macro invocation
    = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
    |
30  |     impl_or_verify!(T: zerocopy::Unaligned => Unaligned for Foo<T>);
    |                      +++++++++++++++++++++

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
